--- a/profile.html
+++ b/profile.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profile Component</title>
+    <!-- variable.css 파일 추가 -->
+    <link rel="stylesheet" href="/src/style/variable.css" />
   </head>
   <body>
     <!-- Profile 컴포넌트를 사용 -->
