--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Lit</title>
-    <link rel="stylesheet" href="./src/index.css" />
+    <title>EUID with 8ollow</title>
+    <link rel="stylesheet" href="./src/style/reset.css" />
     <script type="module" src="/src/main.js"></script>
   </head>
-  <body>
-    <my-element>
-      <h1>Vite + Lit</h1>
-    </my-element>
-  </body>
+  <body></body>
 </html>
