--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EUID with 8ollow</title>
-    <link rel="stylesheet" href="./src/style/reset.css" />
+    <link rel="stylesheet" href="/src/style/reset.css" />
+    <link rel="stylesheet" href="/src/style/variable.css" />
+
+    <link rel="stylesheet" href="./src/style/index.css" />
     <script type="module" src="/src/main.js"></script>
   </head>
   <body></body>
