feat: profile 컴포넌트 파일 추가
profile 컴포넌트를 구현하기 위해 필요한 JS와 CSS 파일을 생성하였습니다.
-  LitElement를 사용하여 채팅 풍선 컴포넌트 구현
-  컴포넌트 스타일 정의
- 사람 아이콘은 asset 폴더에서 불러오도록 설정
- 채팅 메시지와 카운트를 동적으로 표시

--- a/profile.html
+++ b/profile.html
@@ -5,16 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profile Component</title>
     <!-- variable.css 파일 추가 -->
-    <link rel="stylesheet" href="/src/style/variable.css" />
+    <link rel="stylesheet" href="./src/style/variable.css" />
   </head>
   <body>
-    <!-- Profile 컴포넌트를 사용 -->
+    <!-- Profile/Contents -->
     <profile-contents></profile-contents>
+    <profile-closed></profile-closed>
+    <profile-choice-button></profile-choice-button>
+    <profile-unclosed></profile-unclosed>
+    <chat-balloon
+      count="8"
+      message="제가 있는 곳까지 와서 거래했어요."
+    ></chat-balloon>
 
-    <!-- profile_component.js 파일을 가져옴 -->
-    <script
-      type="module"
-      src="/src/components/Profile/profile_component.js"
-    ></script>
+    <!-- 통합 main.js -->
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
