--- a/src/pages/signUp/signUp.html
+++ b/src/pages/signUp/signUp.html
@@ -6,9 +6,16 @@
     <title>Document</title>
     <link rel="stylesheet" href="/src/style/reset.css" />
     <link rel="stylesheet" href="/src/style/variable.css" />
+    <link rel="stylesheet" href="/src/pages/signUp/signUp.css" />
     <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/pages/signUp/signUp.js"></script>
   </head>
   <body>
-    <h1>signUp</h1>
+    <h1 class="sr-only">회원가입</h1>
+    <div class="back-container">
+      <back-component></back-component>
+    </div>
+
+    <sign-up></sign-up>
   </body>
 </html>
