--- a/src/pages/main/exchange.html
+++ b/src/pages/main/exchange.html
@@ -7,16 +7,12 @@
     <title>exchange page</title>
     <link rel="stylesheet" href="/src/style/reset.css" />
     <link rel="stylesheet" href="/src/style/variable.css" />
-    <!-- <link rel="stylesheet" href="/src/components/Main/State/State.css" /> -->
     <script type="module" src="/src/pages/main/exchange.js"></script>
   </head>
   <body>
-    <list-item></list-item>
-    <h1>exchange page!</h1>
+    <h1>exchange pageㅠ</h1>
 
-    <main-state status="reserved" price="800000"></main-state>
-    <main-state status="complete" price="50000"></main-state>
-    <main-state status="" price="150000"></main-state>
+    <list-item></list-item>
 
     <plus-button></plus-button>
   </body>
