[Fix] navItems 링크 연결
- main/navItems 컴포넌트에 페이지 링크 연결
- 기기거래를 뺀 나머지 링크는 임시로 설정
- CSS 중복 제거 및 코드 간소화

Resolved #26

--- a/src/pages/main/exchange.html
+++ b/src/pages/main/exchange.html
@@ -12,12 +12,9 @@
   <body>
     <h1>exchange page</h1>
     <hr />
-
-    <!-- <region-menu></region-menu> -->
-
+    <region-menu></region-menu>
     <nav-items></nav-items>
     <list-item></list-item>
-
     <plus-button></plus-button>
   </body>
 </html>
