--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="/" href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Main</title>
+    <title>main page</title>
     <link rel="stylesheet" href="./src/index.css" />
+    <link rel="stylesheet" href="/src/style/reset.css" />
+    <link rel="stylesheet" href="/src/style/variable.css" />
     <script type="module" src="/src/pages/main/index.js"></script>
   </head>
   <body>
-    <h1>메인</h1>
+    <h1>main page</h1>
+    <hr />
+
+    <nav-items></nav-items>
   </body>
 </html>
