[Rename]: import 정리
- 컴포넌트 관련 import main으로 묶음

--- a/src/pages/Login/index.html
+++ b/src/pages/Login/index.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="/src/style/reset.css" />
     <link rel="stylesheet" href="/src/style/variable.css" />
     <link rel="stylesheet" href="/src/pages/Login/Login.css" />
+
     <script type="module" src="/src/main.js"></script>
     <script type="module" src="/src/pages/Login/Login.js"></script>
   </head>
   <body>
-    <h1 class="sr-only">회원가입</h1>
+    <h1 class="sr-only">로그인</h1>
     <div class="back-container">
       <back-component></back-component>
     </div>
