--- a/src/pages/board/board.html
+++ b/src/pages/board/board.html
@@ -5,14 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Board 테스트</title>
-    <script type="module" src="/src/components/Board/index.js"></script>
-    <link rel="stylesheet" href="/src/style/reset.css" />
 
+    <link rel="stylesheet" href="/src/style/reset.css" />
     <link rel="stylesheet" href="/src/style/variable.css" />
     <link rel="stylesheet" href="/src/pages/board/board.css" />
+
+    <script type="module" src="/src/components/Board/index.js"></script>
+    <link
+      rel="stylesheet"
+      href="/src/components/Board/BoardField/BoardField.css"
+    />
     <script
       type="module"
-      src="/src/components/Board/BoardField/BoardField.js"
+      src="/src/components/Main/MainButton/MainButton.js"
     ></script>
 
     <script type="module" src="/src/main.js"></script>
@@ -26,6 +31,7 @@
       <main-button name="질의응답"> </main-button>
       <main-button name="자유게시판"></main-button>
     </div>
+
     <ul class="board-field-container">
       <li>
         <board-field
