--- a/src/pages/board/board.html
+++ b/src/pages/board/board.html
@@ -8,48 +8,26 @@
 
     <link rel="stylesheet" href="/src/style/reset.css" />
     <link rel="stylesheet" href="/src/style/variable.css" />
-    <link rel="stylesheet" href="/src/pages/board/board.css" />
 
     <script type="module" src="/src/components/Board/index.js"></script>
-    <link
-      rel="stylesheet"
-      href="/src/components/Board/BoardField/BoardField.css"
-    />
-    <script
-      type="module"
-      src="/src/components/Main/MainButton/MainButton.js"
-    ></script>
-
     <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/pages/board/board.js"></script>
+
+    <style>
+      body.modal-overlay::before {
+        content: '';
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.4);
+        z-index: 9999; /* 최상단으로 배치 */
+      }
+    </style>
   </head>
 
   <body>
-    <div class="main-button-container">
-      <main-button name="주제"></main-button>
-      <main-button name="인기글"></main-button>
-      <main-button name="같이해요"></main-button>
-      <main-button name="질의응답"> </main-button>
-      <main-button name="자유게시판"></main-button>
-    </div>
-
-    <ul class="board-field-container">
-      <li>
-        <board-field
-          text="같이해요"
-          title="youtube 클론 프젝 같이 하실 분~!"
-          location="응암제 3동"
-          personCount="1/3"
-          gender="누구나참석가능"
-          meetDay="오늘"
-        ></board-field>
-      </li>
-      <li><board-field text="질의응답"></board-field></li>
-      <li><board-field text="질의응답"></board-field></li>
-      <li><board-field text="질의응답"></board-field></li>
-      <li><board-field text="같이해요"></board-field></li>
-      <li><board-field text="자유게시판"></board-field></li>
-    </ul>
-    <region-menu></region-menu>
-    <base-header></base-header>
+    <board-page></board-page>
   </body>
 </html>
