[feat] Exchange 페이지 기능 추가 및 UI 개선
- ListItem 컴포넌트에서 이미지 URL 생성 및 기본 이미지 처리 로직 추가
- 시간 함수(elapsedTime)를 구현해 상대 시간(방금 전, 1시간 전 등) 표시
 - 좋아요(LikeCounter) 컴포넌트 연동
- ExchangeLayout에서 데이터 fetch 및 렌더링

--- a/src/pages/main/exchange.html
+++ b/src/pages/main/exchange.html
@@ -12,9 +12,7 @@
   <body>
     <h1>exchange page</h1>
     <hr />
-    <region-menu></region-menu>
-    <nav-items></nav-items>
-    <list-item></list-item>
-    <plus-button></plus-button>
+
+    <exchange-layout></exchange-layout>
   </body>
 </html>
