--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!doctype html>
-<html lang="ko">
+<html lang="ko-KR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EUID with 8ollow</title>
     <link rel="stylesheet" href="/src/style/reset.css" />
     <link rel="stylesheet" href="/src/style/variable.css" />
+    <link rel="stylesheet" href="/src/pages/start/start.css" />
 
-    <link rel="stylesheet" href="./src/style/index.css" />
+    <script type="module" src="/src/pages/start/start.js"></script>
     <script type="module" src="/src/main.js"></script>
   </head>
-  <body></body>
+  <body>
+    <start-page></start-page>
+  </body>
 </html>
