--- a/src/pages/board/board.html
+++ b/src/pages/board/board.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Board 테스트</title>
+    <title>Board</title>
 
     <link rel="stylesheet" href="/src/style/reset.css" />
     <link rel="stylesheet" href="/src/style/variable.css" />
@@ -24,6 +24,7 @@
         background-color: rgba(0, 0, 0, 0.4);
         z-index: 9999; /* 최상단으로 배치 */
       }
+
     </style>
   </head>
 
